tests/baselines/reference/typeSatisfaction_contextualTyping2.errors.txt
typeSatisfaction_contextualTyping2.ts(2,7): error TS7006: Parameter 's' implicitly has an 'any' type.


==== typeSatisfaction_contextualTyping2.ts (1 errors) ====
    let obj: { f(s: string): void } & Record<string, unknown> = {
        f(s) { }, // "incorrect" implicit any on 's'
          ~
!!! error TS7006: Parameter 's' implicitly has an 'any' type.
        g(s) { }
    } satisfies { g(s: string): void } & Record<string, unknown>;
    
    // This needs to not crash (outer node is not expression)
    ({ f(x) { } }) satisfies { f(s: string): void };
    